--- a/contactus.html
+++ b/contactus.html
@@ -139,7 +139,7 @@
 
   </div>
 
-  <footer>
+    <footer class="site-footer">
     <div class="container">
       <div class="row">
         <div class="col-4 col-sm-2 offset-1">
@@ -148,7 +148,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="aboutus.html">About</a></li>
             <li><a href="#">Sites</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="contactus.html">Contact</a></li>
           </ul>
         </div>
         <div class="col-6 col-sm-5 text-center">
