--- a/aboutus.html
+++ b/aboutus.html
@@ -20,6 +20,8 @@
     <header class="jumbotron jumbotron-fluid">
         <div class="container">
             <div class="row">
+                    <div class="col-4 col-sm-3 col-md-2 align-self-center">
+ <a href="index.html"><img src="img/logo.png" class="img-fluid" /></a>                </div>
                 <div class="col">
                     <h1>Nucamp</h1>
                     <h2>a better way to camp</h2>
@@ -125,6 +127,8 @@
             </div>
        </div> 
     <footer class="site-footer">
+          <a class="navbar-brand" href="index.html"><img src="img/logo.png" height="30" width="30" /></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nucampNavbar">
         <div class="container">
             <div class="row">
                 <div class="col-4 col-sm-2 offset-1">
