--- a/contactus.html
+++ b/contactus.html
@@ -21,8 +21,12 @@
 <body>
 
   <header class="jumbotron jumbotron-fluid">
+
     <div class="container">
       <div class="row">
+        <a href="index.html"><img src="img/logo.png" class="img-fluid" /></a>
+        <div class="col-4 col-sm-3 col-md-2 align-self-center">
+        </div>
         <div class="col">
           <h1>NuCamp</h1>
           <h2>a better way to camp</h2>
@@ -139,31 +143,33 @@
 
   </div>
 
-    <footer class="site-footer">
-    <div class="container">
-      <div class="row">
-        <div class="col-4 col-sm-2 offset-1">
-          <h5>Links</h5>
-          <ul class="list-unstyled">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="aboutus.html">About</a></li>
-            <li><a href="#">Sites</a></li>
-            <li><a href="contactus.html">Contact</a></li>
-          </ul>
-        </div>
-        <div class="col-6 col-sm-5 text-center">
-          <h5>Social</h5>
-          <a href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
-          <a href="http://facebook.com/"><i class="fa fa-facebook"></i></a>
-          <a href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
-          <a href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
-        </div>
-        <div class="col-sm-4 text-center">
-          <i class="fa fa-phone fa-lg text-primary"></i> 1-206-555-1234<br />
-          <i class="fa fa-envelope-o fa-lg text-primary"></i> campsites@nucamp.co
+  <footer class="site-footer">
+    <a class="navbar-brand" href="index.html"><img src="img/logo.png" height="30" width="30" /></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nucampNavbar">
+      <div class="container">
+        <div class="row">
+          <div class="col-4 col-sm-2 offset-1">
+            <h5>Links</h5>
+            <ul class="list-unstyled">
+              <li><a href="index.html">Home</a></li>
+              <li><a href="aboutus.html">About</a></li>
+              <li><a href="#">Sites</a></li>
+              <li><a href="contactus.html">Contact</a></li>
+            </ul>
+          </div>
+          <div class="col-6 col-sm-5 text-center">
+            <h5>Social</h5>
+            <a href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
+            <a href="http://facebook.com/"><i class="fa fa-facebook"></i></a>
+            <a href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
+            <a href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
+          </div>
+          <div class="col-sm-4 text-center">
+            <i class="fa fa-phone fa-lg text-primary"></i> 1-206-555-1234<br />
+            <i class="fa fa-envelope-o fa-lg text-primary"></i> campsites@nucamp.co
+          </div>
         </div>
       </div>
-    </div>
   </footer>
 
   <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
